--- a/app.json
+++ b/app.json
@@ -13,10 +13,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "monochromeImage": "./assets/images/android-icon-monochrome.png",
+        "backgroundColor": "#E6F4FE"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -39,10 +39,15 @@
           }
         }
       ]
+      /* If you install it: add "expo-secure-store" here */
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "assetBundlePatterns": ["**/*"],
+    "extra": {
+      "EXPO_PUBLIC_API_BASE_URL": "http://192.168.0.101:8000/api/v1"
     }
   }
 }
